--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,37 @@
-# Local .terraform directories
-.terraform/
-
-# .tfstate files
+# Terraform
 *.tfstate
 *.tfstate.*
+*.tfplan
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+*.auto.tfvars
 
-# Crash log files
-crash.log
-crash.*.log
+# Environment variables
+.env
+.env.*
+!.env.example
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
+# Azure
+*.pfx
+*.key
+*.pem
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+# OS
+.DS_Store
+Thumbs.db
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# IDE
+.vscode/
+.idea/
+*.swp
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
+# Python
+__pycache__/
+*.py[cod]
+venv/
+.venv/
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Logs
+*.log
+logs/
