--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [webserver]
-vm-azure ansible_host=ipàStockerIci ansible_user=azureuser ansible_ssh_private_key_file=~/.ssh/id_rsachemin vers ta clé privée (celle utilisée pour te connecter à la VM)
+vm-azure ansible_host=51.103.124.209 ansible_user=azureuser ansible_ssh_private_key_file=/Users/axelbacquet/Downloads/Axel.pem
